--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>13</version>
+        </dependency>
     </dependencies>
 
     <build>
