--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
                 <version>11</version>
                 <type>pom</type>
             </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.3</version>
+        </dependency>
     </dependencies>
 
     <build>
