--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <artifactId>kotlinx-coroutines-core</artifactId>
             <version>1.4.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-javafx -->
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-javafx</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+
         <!-- dependency>
                     <groupId>org.jetbrains.kotlin</groupId>
                     <artifactId>kotlin-test</artifactId>
